feat : user rest api 기능 및 서비스단 기능 추가
