# docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "10.30.8.25:8888",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/duplicate": {
+        "/auth/duplicate": {
             "get": {
                 "description": "이메일 중복 체크 요청",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "로그인 요청",
                 "consumes": [
@@ -80,7 +80,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseFormat"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.ResponseFormat"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.LoginResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -92,7 +104,7 @@
                 }
             }
         },
-        "/api/v1/auth/me": {
+        "/auth/me": {
             "get": {
                 "description": "사용자 정보 조회",
                 "consumes": [
@@ -128,53 +140,9 @@
                         }
                     }
                 }
-            },
-            "put": {
-                "description": "사용자 정보 수정 요청",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "사용자 정보 수정",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "check_password",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "name": "nickname",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "name": "password",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseFormat"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ResponseFormat"
-                        }
-                    }
-                }
             }
         },
-        "/api/v1/auth/me/logout": {
+        "/auth/me/logout": {
             "delete": {
                 "description": "로그아웃 요청",
                 "consumes": [
@@ -212,7 +180,87 @@
                 }
             }
         },
-        "/api/v1/auth/me/resign": {
+        "/auth/me/nickname": {
+            "put": {
+                "description": "사용자의 닉네임을 변경합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "닉네임 변경",
+                "parameters": [
+                    {
+                        "description": "닉네임 변경 요청",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateNicknameRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseFormat"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseFormat"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/me/password": {
+            "put": {
+                "description": "사용자의 비밀번호를 변경합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "비밀번호 변경",
+                "parameters": [
+                    {
+                        "description": "비밀번호 변경 요청",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdatePasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseFormat"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ResponseFormat"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/me/resign": {
             "delete": {
                 "description": "회원탈퇴 요청",
                 "consumes": [
@@ -250,7 +298,7 @@
                 }
             }
         },
-        "/api/v1/auth/password": {
+        "/auth/password": {
             "post": {
                 "description": "비밀번호 확인 요청",
                 "consumes": [
@@ -290,7 +338,7 @@
                 }
             }
         },
-        "/api/v1/auth/signup": {
+        "/auth/signup": {
             "post": {
                 "description": "회원 가입 요청",
                 "consumes": [
@@ -330,7 +378,7 @@
                 }
             }
         },
-        "/api/v1/monitor": {
+        "/monitor": {
             "get": {
                 "description": "사용자가 등록한 모니터링 목록 조회",
                 "consumes": [
@@ -397,7 +445,7 @@
                 }
             }
         },
-        "/api/v1/monitor/{id}": {
+        "/monitor/{id}": {
             "get": {
                 "description": "사용자가 등록한 모니터링 상세 정보 조회",
                 "consumes": [
@@ -520,6 +568,9 @@
     "definitions": {
         "dto.CheckPasswordRequest": {
             "type": "object",
+            "required": [
+                "password"
+            ],
             "properties": {
                 "password": {
                     "type": "string"
@@ -528,6 +579,9 @@
         },
         "dto.DuplicateEmailRequest": {
             "type": "object",
+            "required": [
+                "email"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -536,11 +590,29 @@
         },
         "dto.LoginRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -576,6 +648,12 @@
         },
         "dto.SignupRequest": {
             "type": "object",
+            "required": [
+                "check_password",
+                "email",
+                "nickname",
+                "password"
+            ],
             "properties": {
                 "check_password": {
                     "type": "string"
@@ -584,10 +662,13 @@
                     "type": "string"
                 },
                 "nickname": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 2
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 8
                 }
             }
         },
@@ -602,6 +683,35 @@
                 },
                 "port": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.UpdateNicknameRequest": {
+            "type": "object",
+            "required": [
+                "nickname"
+            ],
+            "properties": {
+                "nickname": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 2
+                }
+            }
+        },
+        "dto.UpdatePasswordRequest": {
+            "type": "object",
+            "required": [
+                "current_password",
+                "new_password"
+            ],
+            "properties": {
+                "current_password": {
+                    "type": "string"
+                },
+                "new_password": {
+                    "type": "string",
+                    "minLength": 8
                 }
             }
         }
