# internal/domain/user/model.go
@@ -11,7 +11,8 @@ type User struct {
 	Email        string    `gorm:"unique;not null"`
 	PasswordHash string    `gorm:"not null"`
 	IsActive     bool      `gorm:"default:true"`
+	IsDeleted    bool
 	CreatedAt    time.Time
 	UpdatedAt    time.Time
-	IsDeleted    bool
+	NickName     string
 }
